--- a/src/styles/clay-light.less
+++ b/src/styles/clay-light.less
@@ -1,13 +1,10 @@
 @import 'topsoil/variables';
 @import 'topsoil/utilities';
 
-
 @import 'topsoil/baseline';
-@import 'topsoil/layout';
 @import 'topsoil/typography';
 
-@import 'topsoil/elements/form';
-@import 'topsoil/elements/table';
-@import 'topsoil/theme.less';
-// @import 'tags.less';
-
+// @import 'topsoil/elements/form';
+// @import 'topsoil/elements/table';
+@import 'topsoil/layout';
+// @import 'topsoil/theme.less';
