--- a/src/styles/topsoil/elements/action-bar.less
+++ b/src/styles/topsoil/elements/action-bar.less
@@ -49,10 +49,12 @@ action-bar
     margin: 0;
     height: 2rem;
     padding: 0 0.3rem;
+    width: inherit;
   }
 
-  &>button {
-    margin-left: 1.5rem;
+  a {
+    height: 100%;
+    padding: 0.5rem 0.5rem;
   }
 
   .clearfix;
@@ -97,10 +99,6 @@ action-bar
   }
   li {
     text-align: right;
-    margin: 0 0 0 0.8rem;
-  }
-
-  a {
-    height: 100%;
+    margin: 0 0 0 0.5rem;
   }
 }
