--- a/src/styles/topsoil/baseline.less
+++ b/src/styles/topsoil/baseline.less
@@ -27,3 +27,90 @@ ol,
 form {
   margin-bottom: 2.5rem;
 }
+
+
+/* baseline table */
+table {
+  width: 100%;
+  overflow: auto;
+  display: block;
+
+  th,
+  td {
+    padding: 0.5rem 1rem;
+    text-align: left;
+  }
+  th:first-child,
+  td:first-child {
+    padding-left: 0;
+  }
+  th:last-child,
+  td:last-child {
+    padding-right: 0;
+  }
+}
+
+
+/* baseline form */
+form {
+  & > header {
+    margin-bottom: 1rem;
+  }
+
+  & > footer {
+    margin-top: 2.5rem;
+  }
+
+  & > div,
+  & > header,
+  & > footer {
+    .aligned-fields;
+    margin-bottom: 1rem;
+    & > div {
+      display: inline-block;
+    }
+  }
+
+  fieldset {
+    padding-left: 0;
+    border: none;
+    border-top: 1px solid #aaa;
+
+    legend {
+      padding: 0.2rem 0.5rem;
+      border: 1px solid #aaa;
+    }
+  }
+
+  label {
+    margin-right: 1rem;
+
+    & > input[type] {
+      margin: 0 0.5rem 0 0;
+    }
+  }
+
+  .aligned-fields;
+}
+
+.aligned-fields() {
+  & > label {
+    text-align: right;
+    display: inline-block;
+    vertical-align: top;
+    width: 10em;
+    margin-right: 1rem;
+  }
+}
+
+
+/* button -- primary */
+.button.button--primary,
+button.button--primary,
+input[type="submit"].button--primary,
+input[type="reset"].button--primary,
+input[type="button"].button--primary {
+  font-weight: bold;
+}
+
+
