--- a/src/styles/topsoil/theme.less
+++ b/src/styles/topsoil/theme.less
@@ -4,15 +4,6 @@ body {
   color: @text-color;
 }
 
-body > header {
-  background: @primary-color;
-  box-shadow: 0 0 .6em @divider-color;
-}
-
-body > aside {
-  background: @primary-color--muted;
-  border-right: 2px solid @divider-color;
-}
 
 
 a {
@@ -37,12 +28,164 @@ code {
   border: 1px solid @divider-color;
 }
 
+table {
+  th,
+  td {
+    border-bottom: 1px solid @divider-color;
+  }
+
+  tbody td {
+    color: @text-color--primary;
+  }
+}
+
+
+legend {
+  border-bottom: 1px solid @divider-color;
+}
+
+form {
+  & > div {
+    & > label {
+      color: @text-color--secondary;
+    }
+  }
+}
+
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  color: @alt-text-color--primary;
+  background-color: @accent-color;
+  border-radius: @border-radius;
+  border: 1px solid @accent-color--subtle;
+  .box-shadow;
+}
+
+input, optgroup, select, textarea {
+  color: @text-color--primary;
+}
+.button, button, input, optgroup, select, textarea, fieldset {
+  margin-bottom: 1.5rem;
+}
+
+
+input[type="date"],
+input[type="time"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
+  border: 1px solid @divider-color;
+  background-color: transparent;
+  border-radius: @border-radius;
+}
+
+.button.button--primary,
+button.button--primary,
+input[type="submit"].button--primary,
+input[type="reset"].button--primary,
+input[type="button"].button--primary {
+  color: @text-color--primary;
+  background-color: transparent;
+  border-color: @divider-color; 
+}
+.button.button--primary:hover,
+button.button--primary:hover,
+input[type="submit"].button--primary:hover,
+input[type="reset"].button--primary:hover,
+input[type="button"].button--primary:hover,
+.button.button--primary:focus,
+button.button--primary:focus,
+input[type="submit"].button--primary:focus,
+input[type="reset"].button--primary:focus,
+input[type="button"].button--primary:focus {
+  color: @text-color--primary;
+  background-color: transparent;
+  border-color: @divider-color; 
+}
+
+.button--primary[disabled]
+.button.button--primary[disabled],
+button.button--primary[disabled],
+input[type="submit"][disabled].button--primary,
+input[type="reset"][disabled].button--primary,
+input[type="button"][disabled].button--primary {
+  background-color: transparent;
+  border-color: @divider-color;
+}
+.button.button--primary[disabled]:hover,
+button.button--primary[disabled]:hover,
+input[type="submit"][disabled].button--primary:hover,
+input[type="reset"][disabled].button--primary:hover,
+input[type="button"][disabled].button--primary:hover,
+.button.button--primary[disabled]:focus,
+button.button--primary[disabled]:focus,
+input[type="submit"][disabled].button--primary:focus,
+input[type="reset"][disabled].button--primary:focus,
+input[type="button"][disabled].button--primary:focus {
+  background-color: transparent;
+  border-color: @divider-color;
+}
+
+input[type="date"]:focus, 
+input[type="time"]:focus, 
+input[type="datetime"]:focus, 
+input[type="email"]:focus, 
+input[type="number"]:focus, 
+input[type="search"]:focus, 
+input[type="text"]:focus, 
+input[type="tel"]:focus, 
+input[type="url"]:focus, 
+input[type="password"]:focus, 
+textarea:focus, select:focus {
+  border: 1px solid @divider-color;
+  outline: 0;
+}
+
+
+body > header {
+  .box-shadow;
+
+  background: @primary-color;
+  color: @alt-text-color;
+
+  a {
+    color: @alt-text-color--primary;
+
+    &:visited {
+      color: @alt-text-color--primary;
+    }
+    &:active, &:hover {
+      outline: 0;
+    }
+    &:active {
+      color: @alt-text-color--secondary;
+    }
+    &:hover {
+      color: @alt-text-color--subtle;
+    }
+  }
+}
+
+body > aside {
+  background-color: @canvas-color;
+  border-right: 1px solid @divider-color;
+}
 
 
 /* Larger than desktop */
 @media (min-width: @bp-larger-than-desktop) {
 
   body > main {
-    border-left: 2px solid @border-color--subtle;
+    // border-left: 2px solid @divider-color;
   }
 }
