--- a/src/styles/topsoil/utilities.less
+++ b/src/styles/topsoil/utilities.less
@@ -9,3 +9,8 @@
     clear: both;
   }
 }
+
+.box-shadow(@shadow: 0 1px 3px rgba(0,0,0,.25)) {
+  -webkit-box-shadow: @shadow; // iOS <4.3 & Android <4.1
+  box-shadow: @shadow;
+}
