--- a/src/styles/topsoil/variables.less
+++ b/src/styles/topsoil/variables.less
@@ -19,16 +19,15 @@ VARIABLES
 @canvas-color: #FFFFFF;             
 
 // brand
-@primary-color: #607D8B;
+@primary-color: #455A64;
 @primary-color--loud: darken(@primary-color, 20%);
-@primary-color--subtle: lighten(@primary-color, 80%);
-@primary-color--muted: lighten(@primary-color, 90%);
+@primary-color--subtle: lighten(@primary-color, 10%);
+@primary-color--muted: lighten(@primary-color, 20%);
 
 @complementary-color: #247BA0;
 @complementary-color--loud: darken(@complementary-color, 20%);
 @complementary-color--subtle: lighten(@complementary-color, 80%);
 @complementary-color--muted: lighten(@complementary-color, 90%);
-
 
 // highlighed/accented content
 @accent-color: #3b8bba;
@@ -42,16 +41,24 @@ VARIABLES
 // call to action (but with caveat: e.g. delete)
 @negative-accent-color: #B2415C;
 
-
+// text content
 @text-color: #333;
 @text-color--primary: @text-color;
 @text-color--secondary: lighten(@text-color, 23%);
 @text-color--subtle: lighten(@text-color, 80%);
 
+@alt-text-color: #fff;
+@alt-text-color--primary: @alt-text-color;
+@alt-text-color--secondary: darken(@alt-text-color, 10%);
+@alt-text-color--subtle: darken(@alt-text-color, 20%);
+
 @link-color: @accent-color;
 @link-color--active: darken(@link-color, 20%);
 @link-color--hover: lighten(@link-color, 10%);
 @link-color--visited: lighten(@link-color, 20%);
+
+// dividers (hr)
+@divider-color: #B6B6B6;
 
 // misc
 @border-radius: 0;
