--- a/src/themes/topsoil.less
+++ b/src/themes/topsoil.less
@@ -3,4 +3,6 @@
 @import 'topsoil/variables';
 @import 'topsoil/utilities';
 @import 'topsoil/layout';
+@import 'topsoil/components/table';
+// @import 'topsoil/components/form';
 @import 'topsoil/theme';
