--- a/src/themes/topsoil/components/table.less
+++ b/src/themes/topsoil/components/table.less
@@ -5,21 +5,11 @@ table {
 
   th,
   td {
-    padding: 12px 15px;
-    text-align: left;
-    // border-bottom: 1px solid @border-color--subtle;
-  }
-  th:first-child,
-  td:first-child {
-    padding-left: 0;
-  }
-  th:last-child,
-  td:last-child {
-    padding-right: 0;
+    border-bottom: 1px solid @divider-color;
   }
 
   tbody td {
-    // color: @text-color--loud;
+    color: @text-color--primary;
   }
 
   .fa {
